# llm-observability-platform

./: Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py
src/metrics/: metrics_collector.py
src/tracing/: llm_tracer.py  tracer.py
