[project]
name = "llm-observability-platform"
version = "1.0.0"
description = "Production LLM observability with distributed tracing, cost tracking, and evaluation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Christopher Mangun", email = "cmangun@gmail.com"}
]
requires-python = ">=3.11"
keywords = ["llm", "observability", "tracing", "monitoring", "ai"]

dependencies = [
    "pydantic>=2.5.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.14",
]
otel = [
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
